  - Enhanced EntityDataLoader to support CSV files with the entity or
    service name on the first line, then a header line, then the data lines
  - The entity-find-one.@value-field attribute can now be an existing Map
    that is not an EntityValue and if so entity fields are added to the Map
    instead of assigning the find result to @value-field
- Service Facade
  - Removed Dzhuvinov JSON-RPC jars (implemented internally now)
  - Improved and fixed JSON-RPC remote service client and auto server
  - Changed service.@validate=false to still apply defaults and type
    conversions for defined in-parameters, but not exclude undefined params
    or error on other validation errors
  - Added parameter.@default attribute which is like the @default-value
    attribute except that it is a field name or expression for the default
    field value.
  - Added SchedulerHistory and code to populate it on various Quartz
    Scheduler events
  - Added EntityJobStore to do persistence for Quartz Scheduler through
    the Entity Facade instead of direct to DB for easier deployment and
    more consistent operation with other parts of Moqui Framework
- Transaction Facade
  - Added transaction-facade.@use-transaction-cache attribute, defaults to
    true, set to false to disable the TransactionCache globally
  - Added new transaction-facade sub-elements transaction-jndi and
    transaction-internal instead of single transaction-factory;
    transaction-internal has a class attribute to specify an implementation
    of the TransactionInternal interface to init/destroy the JTA impl
  - TransactionFacade now has active Synchronization registry like the
    active XAResource registry per transaction that existed before
  - Moved XAResource tools to Synchronization: TransactionCache, OrientDB
    tx handler, ServiceCallSpecial.registerOnCommit() and
    registerOnRollback(), Service ECA rule tx-commit and tx-rollback,
    EntityDataFeed

Bug Fixes:
